# sra

./: .anjuta_sym_db.db  Makefile.am  README  configure.ac
.anjuta/: default.profile
.anjuta/session/: anjuta.session  dock-layout.xml
.ropeproject/: objectdb
src/: Makefile.am  performance.py  performance.py~  redes.py  redes.py~  sra.py  sra.py~  sra.ui  ssh_cliente.py  ssh_cliente.py~
test/: test.py  test2.py
